# DollarBill

./: .dockerignore  .env.example  .gitattributes  .gitignore  30_DAY_PLAN.md  ADVANCED_FEATURES.md  ALPACA_GUIDE.md  BACKTESTING_GUIDE.md  BRUTAL_REVIEW.md  BRUTAL_REVIEW_V2.md  CONFIG_RECREATION.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REEVALUATION.md  REVIEW.md  ROADMAP.md  TRADING_GUIDE.md  VAPORWARE_AUDIT.md  aapl_five_year.csv  aapl_options_live.json  amzn_five_year.csv  backtest_out_080126.txt  build_warnings.txt  docker-compose.yml  errors.txt  fetch_multi_options.py  fetch_multi_stocks.py  fetch_options.py  get_tesla_quotes.py  get_tesla_stock_csv.py  googl_five_year.csv  googl_one_year.csv  meta_five_year.csv  meta_one_year.csv  msft_five_year.csv  msft_options_live.json  nvda_five_year.csv  (+11 more)
benches/: heston_pricing.rs
config/: ml_config.json  paper_trading_config.json  personality_bot_config.json  signals_config.json  stocks.json  stocks.week1.json  strategy_config.json  strategy_deployment.json  trading_bot_config.json  trading_bot_config.week1.json  vol_surface_config.json
data/: aapl_five_year.csv  aapl_heston_params.json  aapl_one_year.csv  aapl_options_live.json  aapl_vol_surface.csv  amd_five_year.csv  amd_heston_params.json  amd_options_live.json  amd_vol_surface.csv  amzn_five_year.csv  amzn_one_year.csv  coin_five_year.csv  coin_heston_params.json  coin_options_live.json  coin_vol_surface.csv  gld_five_year.csv  gld_heston_params.json  gld_options_live.json  gld_vol_surface.csv  googl_five_year.csv  googl_heston_params.json  googl_options_live.json  googl_vol_surface.csv  iwm_five_year.csv  iwm_heston_params.json  iwm_options_live.json  iwm_vol_surface.csv  meta_five_year.csv  meta_heston_params.json  meta_options_live.json  meta_vol_surface.csv  msft_five_year.csv  msft_heston_params.json  msft_one_year.csv  msft_options_live.json  msft_vol_surface.csv  nvda_five_year.csv  nvda_heston_params.json  nvda_one_year.csv  nvda_options_live.json  (+28 more)
deploy/: dollarbill-task.xml  dollarbill.service
docs/: README.md  advanced-features.md  alpaca-guide.md  backtesting-guide.md  competitive-analysis.md  enhanced-personality-implementation.md  failed-tests-analysis.md  getting-started.md  implementation-summary.md  parameter_atlas.md  personality-guide-experimental.md  personality-guide.md  portfolio-guide.md  portfolio-integration.md  short-options-guide.md  strategies-guide.md  test-implementation-summary.md  testing-strategies.md  trading-guide.md
docs/benchmarks/: SUMMARY.md
examples/: alpaca_demo.rs  backtest_heston.rs  backtest_short_options.rs  backtest_short_strangles.rs  backtest_strategy.rs  calibrate_live_options.rs  credit_spreads.rs  enhanced_personality_analysis.rs  evaluate_paper_trading.rs  iron_condor.rs  iron_condor_strategy.rs  live_pricer.rs  mispricing_detection.rs  ml_enhanced_signals.rs  multi_symbol_signals.rs  paper_trading.rs  performance_benchmarks.rs  personality_based_bot.rs  personality_driven_pipeline.rs  portfolio_management.rs  reconcile_backtest_vs_live.rs  short_options_signals.rs  strategy_deployment.rs  strategy_matching.rs  strategy_showcase.rs  strategy_templates.rs  test_keys.rs  test_yahoo_options.rs  trade_signals.rs  trading_bot.rs  vol_surface_analysis.rs
ml/: README.md  signal_classifier.py  volatility_predictor.py
models/: performance_matrix.json  signal_classifier.pkl  signal_classifier_scaler.pkl  stock_classifier.json
py/: bench_quantlib_heston.py  fetch_multi_options.py  fetch_multi_stocks.py  fetch_options.py  gatheral_debug.py  get_tesla_quotes.py  get_tesla_stock_csv.py  heston_cf_debug.py  parse_alpaca.py  plot_vol_surface.py  quantlib_ref.py  validate_pricing.py
scripts/: build_release.ps1  build_release.sh  collect_data_fixed.bat  fix_encoding.py  heston_preparation.bat  heston_preparation.ps1  heston_preparation.sh  run_backtest.ps1  run_backtest.sh  run_enhanced_personality.bat  run_full_pipeline.ps1  run_full_pipeline.sh  run_heston_backtest.ps1  run_heston_backtest.sh  run_ml_pipeline.ps1  run_multi_signals.ps1  run_multi_signals.sh  run_release_pipeline.ps1  run_release_pipeline.sh  run_signals.bat  run_signals.ps1  run_signals.sh  run_vol_surface.ps1  run_vol_surface.sh  setup_python.bat  setup_python.sh  start_bot.ps1  start_bot.sh  test_python.bat
src/: action_table_out.rs  bs_mod.rs  config.rs  error.rs  heston.rs  lib.rs  main.rs  mock_requests.rs  pnl_output.rs  polygon_requests.rs  real_market_data.rs
src/alerting/: mod.rs
src/alpaca/: client.rs  live_bot.rs  mod.rs  types.rs
src/analysis/: mod.rs  (+5 more)
tests/: README.md  lib.rs  pricing_validation.rs  test_portfolio.rs  verify_cdf.rs
(+165 files in other folders)
