[package]
name = "black_scholes_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }   # Async runtime — the beast that makes .await work
reqwest = { version = "0.12", features = ["json"] }  # HTTP client for real API calls
serde = { version = "1.0", features = ["derive"] }   # Serialization for JSON parsing
serde_json = "1.0"                                  # JSON utilities
csv = "1.3"  # Latest stable as of Jan 2026 — fast, zero-copy, battle-tested
yahoo_finance_api = "1.2"                          # Live market data from Yahoo Finance
chrono = "0.4"                                      # Date/time handling
time = "0.3"                                        # Time library for Yahoo Finance API
rayon = "1.8"                                       # Data parallelism for Heston Monte Carlo

# No other deps — we keep this lean as fuck