[package]
name = "dollarbill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }   # Async runtime — the beast that makes .await work
reqwest = { version = "0.12", features = ["json"] }  # HTTP client for real API calls
serde = { version = "1.0", features = ["derive"] }   # Serialization for JSON parsing
serde_json = "1.0"                                  # JSON utilities
csv = "1.3"  # Latest stable as of Jan 2026 — fast, zero-copy, battle-tested
yahoo_finance_api = "1.2"                          # Live market data from Yahoo Finance
chrono = "0.4"                                      # Date/time handling
time = "0.3"                                        # Time library for Yahoo Finance API
rayon = "1.8"                                       # Data parallelism for Heston Monte Carlo
num-complex = "0.4"                                 # Complex numbers for Carr-Madan formula
rust_decimal = { version = "1.36", features = ["serde"] }  # Exact decimal arithmetic for accounting ledger
log = "0.4"                                                 # Structured logging facade for library code
env_logger = "0.11"                                        # Backend for log — writes to stderr, filter via RUST_LOG
clap = { version = "4", features = ["derive"] }            # CLI argument parsing with subcommands
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }  # SQLite persistence
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }           # WebSocket for Alpaca stream
futures-util = "0.3"                                        # Stream combinators for WebSocket
ratatui = "0.29"                                            # Terminal UI framework for dashboard
crossterm = "0.28"                                          # Cross-platform terminal control
lettre = { version = "0.11", features = ["tokio1-native-tls"] }  # SMTP email alerting

[dev-dependencies]
proptest = "1"   # Property-based testing: 1000-case fuzzing for numerical stability
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "heston_pricing"
harness = false

[profile.bench]
debug = true